<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.twomin.timerclient.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground3">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/nav_bottom_guide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/navHeight" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:src="@drawable/logo"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/nav_bottom_guide"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/TextHeader"
            android:text="@string/app_name"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="9dp"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintBottom_toBottomOf="@id/nav_bottom_guide"/>

        <ImageView
            android:id="@+id/history"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_history"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="4dp"
            android:onClick="@{() -> vm.clickHistory()}"
            app:layout_constraintEnd_toStartOf="@id/setting"
            app:layout_constraintBottom_toBottomOf="@id/nav_bottom_guide"/>

        <ImageView
            android:id="@+id/setting"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_settings"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="4dp"
            android:onClick="@{() -> vm.clickSetting()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/nav_bottom_guide"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLine2"
            app:layout_constraintBottom_toBottomOf="@id/nav_bottom_guide"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/nav_bottom_guide"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/navMargin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empty_time_set_description"
                        android:theme="@style/TextSubInfo"
                        android:textSize="12sp"
                        android:visibility="@{vm.recentTimeSet.empty &amp;&amp; vm.saveTimeSet.empty ? View.VISIBLE : View.GONE}"
                        android:layout_marginBottom="@dimen/navMargin"
                        android:layout_marginStart="33dp"/>

                    <LinearLayout
                        android:id="@+id/recent_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="40dp"
                        android:visibility="@{vm.recentTimeSet.empty ? View.GONE : View.VISIBLE}">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextTitle"
                            android:text="@string/recent_time_set_header"
                            android:layout_marginStart="33dp"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recent_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false"
                            android:layout_marginTop="20dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/save_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="40dp"
                        android:visibility="@{vm.saveTimeSet.empty ? View.GONE : View.VISIBLE}">
                        
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginStart="33dp"
                            android:layout_marginEnd="33dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:theme="@style/TextTitle"
                                android:text="@{@string/save_time_set_header(vm.saveTimeSet.size())}"/>
                            
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="bottom">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:theme="@style/TextBody"
                                    android:text="@string/management_time_set_text"
                                    android:onClick="@{() -> vm.manageTimeSet()}"/>
                                
                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@color/colorBody"/>

                            </LinearLayout>

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/save_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false"
                            android:layout_marginTop="20dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/preset_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="@dimen/scrollBottomMargin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextTitle"
                            android:text="@string/preset_time_set_header"
                            android:layout_marginStart="33dp"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/preset_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false"
                            android:layout_marginTop="20dp"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <com.twomin.timerclient.ui.common.TaskLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="@dimen/mainTaskBottomMargin"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/main_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:cardCornerRadius="12dp"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="8dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/divide_guide"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.407"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:background="#fff"
                            android:text="@string/task_preset_text"
                            android:theme="@style/TextTitle"
                            android:gravity="center"
                            android:onClick="@{() -> vm.clickPreSet()}"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/divide_guide"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:background="@drawable/background_half_task_blue"
                            android:text="@string/task_create_timer_text"
                            android:theme="@style/TextTitle"
                            android:textColor="@color/colorWhite"
                            android:gravity="center"
                            android:onClick="@{() -> vm.createTimeSet()}"
                            app:layout_constraintStart_toEndOf="@id/divide_guide"
                            app:layout_constraintEnd_toEndOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </com.twomin.timerclient.ui.common.TaskLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>